# OpenGL-Template

./: .gitignore  CMakeLists.txt  README.md
include/: window.h
src/: main.c  window.c
